[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/TitleFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Utility/Dialogue.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Raleway-Italic.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[node name="Dialogue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
anchor_left = 0.178125
anchor_top = 0.736389
anchor_right = 0.821094
anchor_bottom = 0.973611
margin_top = -0.200012
color = Color( 0.368627, 0.368627, 0.368627, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SpeakerLabel" type="RichTextLabel" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 81.0
margin_top = 15.0
margin_right = -82.0
margin_bottom = -127.0
custom_fonts/normal_font = ExtResource( 1 )
text = "Speaker"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueLabel" type="RichTextLabel" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 82.0
margin_top = 49.0
margin_right = -82.0
margin_bottom = -22.0
custom_fonts/normal_font = SubResource( 2 )
text = "Dialogue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character1" type="TextureRect" parent="."]
margin_right = 640.0
margin_bottom = 720.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Character2" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}
